[gd_scene load_steps=9 format=2]

[ext_resource path="res://World/Shop/post.gd" type="Script" id=1]
[ext_resource path="res://World/tileMap.tscn" type="PackedScene" id=2]
[ext_resource path="res://Items/coin/icon.png" type="Texture" id=3]
[ext_resource path="res://Fonts/dpcomic.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://UI/inventory/description_panel/DescriptionPanel.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
size = 18
font_data = ExtResource( 4 )

[sub_resource type="CapsuleShape2D" id=2]
radius = 18.0
height = 24.0

[sub_resource type="ParticlesMaterial" id=3]
lifetime_randomness = 1.0
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 40.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 50.0
initial_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 5.0
scale_random = 1.0
color = Color( 0.415686, 0.87451, 0.866667, 1 )
hue_variation = -0.13
hue_variation_random = 1.0

[node name="Post" type="Node2D"]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 1 )

[node name="TileMap" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, -12 )
cell_size = Vector2( 16, 16 )
tile_data = PoolIntArray( -131073, 10, 0 )

[node name="Effect" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, -12 )
cell_size = Vector2( 16, 16 )
tile_data = PoolIntArray( -131073, 11, 0 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 0, -48 )

[node name="Label" type="Label" parent="."]
margin_left = 2.0
margin_top = -88.0
margin_right = 42.0
margin_bottom = -71.0
custom_fonts/font = SubResource( 1 )
text = "35"
valign = 1

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -8, -80 )
texture = ExtResource( 3 )
hframes = 14

[node name="DetectionZone" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionZone"]
position = Vector2( 0, -20 )
shape = SubResource( 2 )

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( 0, -40 )
z_index = 5
emitting = false
amount = 60
lifetime = 1.8
one_shot = true
speed_scale = 1.2
explosiveness = 1.0
process_material = SubResource( 3 )

[node name="DescriptionPanel" parent="." instance=ExtResource( 5 )]
visible = false
margin_left = -74.0
margin_top = -290.0
margin_right = 226.0
margin_bottom = 110.0
rect_scale = Vector2( 0.5, 0.5 )

[connection signal="body_entered" from="DetectionZone" to="." method="_on_DetectionZone_body_entered"]
[connection signal="body_exited" from="DetectionZone" to="." method="_on_DetectionZone_body_exited"]
